[gd_scene load_steps=7 format=3 uid="uid://rsooj8dmndhf"]

[ext_resource type="Script" path="res://Scenes/UI/main_menu.gd" id="1_gs5eg"]
[ext_resource type="FontFile" uid="uid://btitt1xthdnui" path="res://Fonts/Achafexp.ttf" id="1_qjf2o"]
[ext_resource type="Theme" uid="uid://htnujy46658t" path="res://Scenes/UI/theme.tres" id="1_tnpsq"]
[ext_resource type="Texture2D" uid="uid://bkggt33x0imt8" path="res://Assets/Pictures/EscapeTheKrampus1.png" id="2_73gj6"]
[ext_resource type="AudioStream" uid="uid://3eti8ddwaa1y" path="res://Audio/Deck the Halls 8 Bit Cover Parry BiTiDuck.mp3" id="5_qje4r"]

[sub_resource type="FontFile" id="FontFile_yip1d"]
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gs5eg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_73gj6")

[node name="BaseBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="BaseBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LblTitle" type="Label" parent="BaseBox/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_qjf2o")
theme_override_font_sizes/font_size = 256
text = "Escape The Krampus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BaseBox"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BaseBox/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BtnPlay" type="Button" parent="BaseBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme = ExtResource("1_tnpsq")
text = "Play"

[node name="BtnCredits" type="Button" parent="BaseBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme = ExtResource("1_tnpsq")
text = "Credits"

[node name="BtnQuit" type="Button" parent="BaseBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme = ExtResource("1_tnpsq")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -291.0
offset_top = -62.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="LblVersion" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_fonts/font = SubResource("FontFile_yip1d")
theme_override_font_sizes/font_size = 24
text = "Version 1.0.0"
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qje4r")
autoplay = true

[connection signal="pressed" from="BaseBox/HBoxContainer/VBoxContainer/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="BaseBox/HBoxContainer/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="BaseBox/HBoxContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
